@@ -2,6 +2,7 @@ The survey package has benefited from code, bug reports, and feature
 requests from users, including:
   Daniel Almirall
   Guiseppe Antonaci
+  Maciej Beręsewicz
   Brad Biggerstaff
   Milan Bouchet-Valat
   Norman Breslow
